# stl_to_obj

./: .gitignore  README.md  pyproject.toml  stl_to_obj.py
stl_to_obj/: __init__.py  __main__.py  stl_to_obj.py
